<resources>
    <string name="app_name">MySimesApp</string>

    <!-- Facebook Strings -->
    <string name="facebook_app_id">244159339802348</string>
    <string name="fb_login_protocol_scheme">fb244159339802348</string>
    <!--<string name="default_web_client_id">54315508287-33lrcv02mu14on99pc118jqgm0epp2mv.apps.googleusercontent.com</string>-->
    <string name="select_file">Select a file</string>
    <string name="no_file_selected">No file selected</string>
    <string name="start_upload">Start Upload</string>
    <string name="book_title">Book title</string>
    <string name="book_size">Book size</string>
    <string name="book_desc">Book description</string>
    <string name="add_period">Add Period</string>
    <string name="course_title">Course title</string>
    <string name="start_time">Starts time</string>
    <string name="end_time">End Time</string>
    <string name="day_of_week">Day of the week</string>
    <string name="lecture_name">Lecturer</string>
    <string name="is_practical">Is practical?</string>
    <string name="practical">Practical</string>
    <string name="update">Update</string>
    <string name="timetable_course">Course</string>
    <string name="course_unit">units</string>
    <string name="course_code">Code</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="Class">My Class</string>
    <string name="day">Day</string>
    <string name="tap_to_insert">Tap to insert</string>
    <string name="request_executive">Request executive status</string>
    <string name="enter_request_code">Enter request code</string>
    <string name="select_position">Select executive position</string>
    <string name="select_files">Select files</string>
    <string name="zero_progress">0%</string>
    <string name="add_ebook_tag">Add tags to book</string>
    <string name="populate_timetable">Populate timetable</string>
    <string name="user_name">User name</string>
    <string name="download">Download</string>
    <string name="uploader">Uploader</string>
    <string name="file_type">File type</string>
    <string name="send">Send</string>
    <string name="add_image">Add image</string>
    <string name="agree_continue">Agree and continue</string>
    <string name="sign_up">Sign up</string>
    <string name="display_name">Display name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="register">Register</string>
    <string name="new_user_register">New user? Register now</string>
    <string name="sign_in">Sign in</string>
    <string name="already_registered">Already registered? sign in now.</string>


    <string-array name="colors" translatable="false">
        <item>#33b5e5</item>
        <item>#0099cc</item>
        <item>#547bca</item>
        <item>#8DC3EE</item>
        <item>#cccccc</item>
        <item>#9E9E9E</item>
        <item>#888888</item>
    </string-array>

    <string-array name="ime_classes">
        <item>ND1 (Fulltime)</item>
        <item>ND1 (Parttime)</item>
        <item>ND2 (Fulltime)</item>
        <item>ND2 (Parttime)</item>
        <item>ND3</item>
        <item>HND1 (Fulltime)</item>
        <item>HND1 (Parttime)</item>
        <item>HND2 (Fulltime)</item>
        <item>HND2 (Parttime)</item>
        <item>HND3</item>
    </string-array>

    <string-array name="Week">
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>

    <string-array name="AmPM">
        <item>AM</item>
        <item>PM</item>

    </string-array>

</resources>
